# Automatic_Greenhouse_ESP32

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig
components/actuators/: CMakeLists.txt  grow_light.c  grow_light.h  pump.c  pump.h
components/common/: utils.h
components/config/: CMakeLists.txt  parameter_config.c  parameter_config.h  secrets.h.template
components/connectivity/: CMakeLists.txt  firebase_db.c  firebase_db.h  http_server.c  http_server.h  index.html  mqtt.c
components/hw_init/: CMakeLists.txt  adc_init.c  adc_init.h  gpio_config.h  i2c_init.c
components/sensors/: CMakeLists.txt  light_sensor.c  soil_moisture.c  soil_moisture.h  temp_hum_sensor.c
components/ui/: CMakeLists.txt  buttons.c  buttons.h  display.c  display.h  status_leds.c  status_leds.h  uart_connection.c  uart_connection.h
main/: CMakeLists.txt  adc_init.c  analog_gauge.c  display.c  fan.c  grow_light.c  i2c_init.c  idf_component.yml  main.c  main.txt  parameter_config.c  pump.c  temp_hum_sensor.c  wifi.c
main/components/: i2c_init.h  parameter_config.h  utils.h
main/components/actuators/: grow_light.h  pump.h
main/components/connectivity/: http_server.c  http_server.h  mqtt.h
main/components/sensors/: light_sensor.c  light_sensor.h  soil_moisture.c  temp_hum_sensor.h
main/components/ui/: buttons.c  buttons.h  status_leds.c  status_leds.h
main/include/: analog_gauge.h  config.h  fan.h  soil_moisture.h  wifi.h
